# cpp-webserver

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  configure.bat  configure.sh
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
Debug/.cmake/api/v1/reply/: codemodel-v2-0925d1f29c0bf82b59f5.json  index-2024-06-19T21-00-39-0803.json  target-webserver-Debug-4b165232f6be4d27f494.json
app/templates/: index.tpl.html
backend/: main.cpp
backend/https/: localhost-privateKey.key  localhost.crt
src/: main.cpp
